--- a/css/application.css
+++ b/css/application.css
@@ -90,11 +90,14 @@ body {
 .container {
   flex-wrap: wrap;
   align-items: center; }
-  .container img {
-    height: 280px;
+  .container div {
     width: 280px;
-    object-fit: cover;
     margin: 20px auto; }
+    .container div img {
+      height: 280px;
+      width: 280px;
+      object-fit: cover;
+      margin-bottom: 20px; }
 
 .search-container {
   background-color: #e9e9e9;
@@ -118,6 +121,9 @@ body {
         background-color: silver;
         justify-content: space-between;
         border-radius: 5px 0px 0px 5px; }
+        @media (max-width: 625px) {
+          .search-container .searchbar .left-search div:first-of-type {
+            display: none; } }
       .search-container .searchbar .left-search div:nth-of-type(2) {
         display: flex;
         width: 250px;
@@ -150,6 +156,9 @@ body {
         justify-content: center;
         font-size: 14px;
         text-transform: uppercase; }
+        @media (max-width: 945px) {
+          .search-container .searchbar .left-search div:nth-of-type(4) {
+            display: none; } }
     .search-container .searchbar .right-search {
       display: flex;
       justify-content: flex-end;
@@ -162,6 +171,9 @@ body {
         padding: 5px;
         border-radius: 5px;
         justify-content: space-between; }
+        @media (max-width: 945px) {
+          .search-container .searchbar .right-search div:first-of-type {
+            display: none; } }
       .search-container .searchbar .right-search div:nth-of-type(2) {
         display: flex;
         width: 50px;
