--- a/css/application.css
+++ b/css/application.css
@@ -86,6 +86,10 @@ body {
   justify-content: space-around;
   align-items: center;
   width: 1300px; }
+  @media (max-width: 945px) {
+    .nav-container {
+      justify-content: space-between;
+      margin: 0 30px; } }
 
 .container {
   flex-wrap: wrap;
@@ -102,11 +106,20 @@ body {
 .search-container {
   background-color: #e9e9e9;
   height: 100px; }
+  @media (max-width: 625px) {
+    .search-container {
+      height: 150px; } }
   .search-container .searchbar {
     width: 100%;
     display: flex;
     justify-content: space-between;
     align-items: center; }
+    @media (max-width: 625px) {
+      .search-container .searchbar {
+        height: 150px;
+        flex-direction: column;
+        flex-wrap: wrap;
+        justify-content: space-around; } }
     .search-container .searchbar .left-search {
       display: flex;
       justify-content: flex-start;
@@ -210,5 +223,57 @@ body {
         background-color: white;
         justify-content: center;
         margin-right: 5px; }
+
+.lower-search {
+  display: flex;
+  justify-content: center;
+  width: 100%; }
+  .lower-search div:first-of-type {
+    display: flex;
+    width: 150px;
+    height: 40px;
+    align-items: center;
+    padding: 5px;
+    border-radius: 5px;
+    justify-content: space-between; }
+  .lower-search div:nth-of-type(2) {
+    display: flex;
+    width: 50px;
+    height: 40px;
+    align-items: center;
+    padding: 5px;
+    border-radius: 5px;
+    border-radius: 50%;
+    padding: 5px;
+    background-color: white;
+    justify-content: center;
+    margin-right: 5px;
+    border: 1px solid silver; }
+  .lower-search div:nth-of-type(3) {
+    display: flex;
+    width: 100px;
+    height: 40px;
+    align-items: center;
+    padding: 5px;
+    border-radius: 5px;
+    background-color: white;
+    border-radius: 40px;
+    justify-content: space-around;
+    margin-right: 5px;
+    color: #8e8e8e;
+    border: 1px solid silver; }
+  .lower-search div:nth-of-type(4) {
+    display: flex;
+    width: 50px;
+    height: 40px;
+    align-items: center;
+    padding: 5px;
+    border-radius: 5px;
+    border-radius: 50%;
+    padding: 5px;
+    background-color: white;
+    justify-content: center;
+    margin-right: 5px;
+    border: 1px solid silver; }
 
 /*# sourceMappingURL=application.css.map */
